# vor-web

./: .gitignore  README.md  agent.py  cm.txt  enagent.py  function_descriptions.py  index.html  localstt.py  localtts.py  main.py  optimize_tts.py  order_functions.py  order_funtions.py  pyproject.toml  reply_after_silence.py  server.py  tts-vie.py
HumAwareVad/: .gitignore  README.md  app.py  requirements.txt
HumAwareVad/humaware_vad/: __init__.py
orders/: order_2d93b77d779a49138714ee10237b95c2.csv  order_44044aa7b4ee4818876771db48401ac5.csv  order_49f59808944a4cce81afe76c4120dfd7.csv  order_68d8a16d22ff447caf350a35da1326be.csv  order_69fc31ccac8f455c89828797b3a61e51.csv  order_6e3d116ccc924210b85e915ec7e0b1bb.csv  order_b0acb58b9bb6463291e785a82326bebe.csv  order_b6a20445dbbb401e8ebbace6b74f0816.csv  order_bf525065b14642bcaf4ff409532def6c.csv  order_e7fc940704dc46a097a3fa150917b743.csv
